--- a/flutter_client/receipt_database_app/pubspec.yaml
+++ b/flutter_client/receipt_database_app/pubspec.yaml
@@ -29,8 +29,9 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   connectivity: ^3.0.6
-  http: ^0.13.3
-  file_picker: ^4.0.0
+  http: ^1.1.0
+  file_picker: ^6.1.1
+  cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
 
@@ -38,9 +39,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  file_picker: ^6.1.1
-  http: ^1.1.0
-  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
