--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,27 @@
-# Amazon S3
-boto3 ~= 1.28.63
-
-# Style Consistency
-black ~= 23.9.1
-
-# Flask
-flask ~= 3.0.0
-
-# Directories
-platformdirs ~= 4.1.0
-
-# SQL
-SQLAlchemy~=2.0.25
+annotated-types==0.6.0
+black==23.9.1
+blinker==1.6.3
+boto3==1.28.67
+botocore==1.31.67
+click==8.1.7
+Flask==3.0.0
+Flask-Cors==4.0.0
+greenlet==3.0.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+MarkupSafe==2.1.3
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==4.1.0
+pydantic==2.5.3
+pydantic_core==2.14.6
+python-dateutil==2.8.2
+s3transfer==0.7.0
+six==1.16.0
+SQLAlchemy==2.0.25
+tomli==2.0.1
+typing_extensions==4.8.0
+urllib3==2.0.7
+Werkzeug==3.0.0
