--- a/flutter_client/receipt_database_app/pubspec.yaml
+++ b/flutter_client/receipt_database_app/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   connectivity: ^3.0.6
+  image: ^3.0.1
   http: ^1.1.0
   file_picker: ^6.1.1
   cached_network_image: ^3.3.1
