added ability to upload from camera (ios)

--- a/flutter_client/receipt_database_app/ios/Runner/Info.plist
+++ b/flutter_client/receipt_database_app/ios/Runner/Info.plist
@@ -45,5 +45,8 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs to access your camera to take a picture of your receipt</string>
+
 </dict>
 </plist>
