--- a/flutter_client/receipt_database_app/pubspec.yaml
+++ b/flutter_client/receipt_database_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
+  image_picker: ^0.8.4+4
 
 
   # The following adds the Cupertino Icons font to your application.
