--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 # Developement
 black ~= 23.9.1  # Style Consistency
-pytest ~= 8.0.0 # Testing
+pytest ~= 8.0.0  # Testing
 pytest-mock ~= 3.12.0
 
 # Production
@@ -9,9 +9,11 @@ gunicorn ~= 21.2.0
 # Core
 flask ~= 3.0.0  # API Runner
 flask-cors ~= 4.0.0
+Werkzeug ~= 3.0.1  # Implied by flask but explicity used
 SQLAlchemy ~= 2.0.25  # Database Runner
 platformdirs ~= 4.1.0  # Platform Specific Directories
 pydantic ~= 2.5.3  # Configuration File Verification
 
 # Hooks
 boto3 ~= 1.28.63  # Amazon S3 Buckets
+botocore ~= 1.31.85  # Implied by boto3 but explicity used
